// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template CreatePage Duplicate Template should render correctly 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Templates",
      "to": "/templates",
    }
  }
  empty={Object {}}
  primaryAction={
    Object {
      "content": "Save Template",
      "disabled": undefined,
      "onClick": undefined,
    }
  }
  title="Duplicate Template"
>
  <Grid>
    <Grid.Column
      lg={4}
      xs={12}
    >
      <Connect(Form)
        name="templateCreate"
        newTemplate={true}
      />
    </Grid.Column>
    <Grid.Column
      lg={8}
      xs={12}
    >
      <LoadableComponent
        action={<ImportSnippetLink />}
      />
    </Grid.Column>
  </Grid>
</Page>
`;

exports[`Template CreatePage New Template should render correctly 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Templates",
      "to": "/templates",
    }
  }
  empty={Object {}}
  primaryAction={
    Object {
      "content": "Save Template",
      "disabled": undefined,
      "onClick": undefined,
    }
  }
  title="New Template"
>
  <Grid>
    <Grid.Column
      lg={4}
      xs={12}
    >
      <Connect(Form)
        name="templateCreate"
        newTemplate={true}
      />
    </Grid.Column>
    <Grid.Column
      lg={8}
      xs={12}
    >
      <LoadableComponent
        action={<ImportSnippetLink />}
      />
    </Grid.Column>
  </Grid>
</Page>
`;
